fix: image not showing

--- a/src/components/Boost/style.module.scss
+++ b/src/components/Boost/style.module.scss
@@ -1,7 +1,7 @@
 .boostWrap {
   background-color: var(--color-neutral-purple);
   background-repeat: no-repeat;
-  background-image: url('/src/assets/bg-boost-desktop.svg');
+  background-image: url('@static/images/bg-boost-desktop.svg');
   height: 200px;
   display: flex;
   justify-content: center;
